--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "react": "^18.2.0",
     "react-carousel": "^4.3.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.22.0",
     "swiper": "^11.1.3",
+    "toastify": "^2.0.1",
     "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
